<resources>
    <string name="app_name">Chat App</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="chat_app">Chat App</string>
    <string name="log_out">Log out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message…</string>
    <string name="button_send">Button Send</string>
    <string name="button_info">Button Info</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="seen">Seen</string>
    <string name="at_21_06_36_2021_05_27">  </string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="send_email_verifier">Reset</string>
    <string name="string_reset_your_password">By clicking RESET, you will receive an email to reset your password.</string>
    <string name="description">Description</string>
    <string name="last_message"> … </string>
    <string name="time_last_message"> 00:00 </string>
    <string name="message">Message</string>
    <string name="users">Users</string>
    <string name="story">Story</string>
    <string name="todo">TODO</string>
    <string name="channel_name">NotificationChannel</string>
    <string name="channel_description">This is notification channel</string>
    <string name="start">Start</string>
    <string name="status">Status</string>
    <string name="recorder_sound">Recorder sound</string>
    <string name="call">Call</string>
    <string name="information">Information</string>
    <string name="back">Back</string>
    <string name="delete_conversation">Delete relationship</string>
    <string name="delete_message">Delete message</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="this_is_description">This is Description</string>
    <string name="upload_story">Upload story</string>
    <string name="media">Media</string>
    <string name="content">Content</string>
</resources>