<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/activity_actionbar_layout"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/forgot_your_password"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/txtRPEmail"
                android:layout_width="309dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="209dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/send_email_verifier"
                android:textColor="#fff" />

        </LinearLayout>
        <TextView
            android:layout_width="280dp"
            android:layout_height="100dp"
            android:text="@string/string_reset_your_password"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>