<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/chat_app"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login"
            android:layout_width="309dp"
            android:textColor="@color/white"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login" />

        <Button
            android:id="@+id/register"
            android:layout_width="309dp"
            android:layout_height="60dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/register" />
    </LinearLayout>


</RelativeLayout>