<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/last_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/show_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_message_right"
            android:maxWidth="320dp"
            android:padding="12dp"
            android:text="@string/hello_blank_fragment"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/show_message_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:maxWidth="296dp"
            android:maxHeight="200dp"
            android:padding="12dp"
            android:background="@drawable/background_message_right"
            android:src="@drawable/gallery"
            android:visibility="visible"
            android:contentDescription="@string/todo" />

        <VideoView
            android:id="@+id/show_message_video"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:padding="12dp"
            android:visibility="gone" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/show_message_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_message_right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_play_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_message_right"
                android:src="@drawable/ic_baseline_play_white"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_message_right"
                android:maxWidth="320dp"
                android:padding="12dp"
                android:text="@string/recorder_sound"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/txt_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_message"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/txt_time_seen"
        android:text="@string/seen"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_time_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_message"
        android:layout_alignParentEnd="true"
        android:text="@string/at_21_06_36_2021_05_27"
        android:visibility="gone" />

</RelativeLayout>