<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@id/btn_logout"
                android:text="@string/profile"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/username"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/txtDesName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/full_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDesNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDesName"
                android:layout_marginTop="10dp"
                android:paddingStart="40dp"
                android:paddingEnd="0dp"
                android:text="@string/full_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDesEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDesNameValue"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDesEmailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDesEmail"
                android:layout_marginTop="10dp"
                android:paddingStart="40dp"
                android:paddingEnd="0dp"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDesPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDesEmailValue"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/phone_number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDesPhoneValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDesPhone"
                android:layout_marginTop="10dp"
                android:paddingStart="40dp"
                android:paddingEnd="0dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_baseline_logout_24"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/btn_upload_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/upload_story" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>