<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_register">

    <include
        android:id="@+id/toolbar"
        layout="@layout/activity_actionbar_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="309dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:autofillHints="@string/email"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="309dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="209dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>