<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:text="@string/call"
            android:textColor="@color/red"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/ic_baseline_add_ic_call_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_view_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:text="@string/information"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/ic_baseline_person_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:text="@string/delete_conversation"
            android:textColor="@color/red"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/ic_baseline_delete_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24" />

    </androidx.cardview.widget.CardView>



</LinearLayout>